TFP-6909: (Fase 1 av 2) Skriver om domenemodellen til VTP (#1761)
* TFP-6618: Skriver om domenemodellen til VTP og rydder opp

---------

Co-authored-by: Fredrik-Holtet <Fredrik.Andre.Holtet@nav.no>
Co-authored-by: Vilde-Zcimarzceck <Vilde.Zcimarzceck@nav.no>
Co-authored-by: Anders Palfi <anders.palfi@nav.no>