@@ -8,32 +8,23 @@ import static no.nav.tjeneste.virksomhet.arbeidsforhold.rs.AaregRSV1Mock.QPRM_TO
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.Map;
 
-import jakarta.ws.rs.core.HttpHeaders;
-import jakarta.ws.rs.core.MultivaluedHashMap;
-import jakarta.ws.rs.core.UriInfo;
-
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import no.nav.foreldrepenger.vtp.testmodell.TestscenarioHenter;
-import no.nav.foreldrepenger.vtp.testmodell.repo.Testscenario;
-import no.nav.foreldrepenger.vtp.testmodell.repo.impl.BasisdataProviderFileImpl;
-import no.nav.foreldrepenger.vtp.testmodell.repo.impl.DelegatingTestscenarioRepository;
-import no.nav.foreldrepenger.vtp.testmodell.repo.impl.TestscenarioRepositoryImpl;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MultivaluedHashMap;
+import jakarta.ws.rs.core.UriInfo;
+import no.nav.vtp.PersonBuilder;
+import no.nav.vtp.person.PersonRepository;
 
 @ExtendWith(MockitoExtension.class)
 class AaregRSV1MockTest {
 
-    private static final String SCENARIOID = "1";
-
-    private static AaregRSV1Mock aaregRSV1Mock;
-    private static Testscenario testscenario;
+    private final AaregRSV1Mock aaregRSV1Mock = new AaregRSV1Mock();
 
     @Mock
     private HttpHeaders headers;
@@ -41,25 +32,14 @@ class AaregRSV1MockTest {
     @Mock
     private UriInfo uriInfo;
 
-
-    @BeforeAll
-    static void setup() {
-        var testScenarioRepository = new DelegatingTestscenarioRepository(
-                TestscenarioRepositoryImpl.getInstance(BasisdataProviderFileImpl.getInstance()));
-        var testscenarioHenter = TestscenarioHenter.getInstance();
-        var testscenarioObjekt = testscenarioHenter.hentScenario(SCENARIOID);
-        var testscenarioJson = testscenarioHenter.toJson(testscenarioObjekt);
-        testscenario = testScenarioRepository.opprettTestscenario(testscenarioJson, Collections.emptyMap());
-        aaregRSV1Mock = new AaregRSV1Mock(testScenarioRepository);
-    }
-
     @Test
     void hentFremtidigArbeidsforholdTest() {
+        var person = PersonBuilder.lagAnnenPart();
+        PersonRepository.leggTilPerson(person);
         when(headers.getHeaderString(HEADER_NAV_PERSONIDENT))
-                .thenReturn(testscenario.getPersonopplysninger().getAnnenPart().getIdent());
+                .thenReturn(person.personopplysninger().identifikator().value());
         when(uriInfo.getQueryParameters()).thenReturn(new MultivaluedHashMap<>(Map.of(
-                QPRM_FOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(0)
-                        .ansettelsesperiodeFom().format(ISO_LOCAL_DATE))));
+                QPRM_FOM, person.arbeidsforhold().getFirst().ansettelsesperiodeFom().format(ISO_LOCAL_DATE))));
 
         var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
         assertThat(arbeidsforhold).hasSize(2);
@@ -67,49 +47,53 @@ class AaregRSV1MockTest {
 
     @Test
     void hentFremtidigArbeidsforholdTest2() {
+        var person = PersonBuilder.lagAnnenPart();
+        PersonRepository.leggTilPerson(person);
         when(headers.getHeaderString(HEADER_NAV_PERSONIDENT))
-                .thenReturn(testscenario.getPersonopplysninger().getAnnenPart().getIdent());
+                .thenReturn(person.personopplysninger().identifikator().value());
         when(uriInfo.getQueryParameters()).thenReturn(new MultivaluedHashMap<>(Map.of(
-                QPRM_FOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(1)
-                        .ansettelsesperiodeTom().plusDays(1).format(ISO_LOCAL_DATE))));
+                QPRM_FOM, person.arbeidsforhold().get(1).ansettelsesperiodeTom().plusDays(1).format(ISO_LOCAL_DATE))));
 
         var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
         assertThat(arbeidsforhold).hasSize(1);
     }
 
-
     @Test
     void hentArbeidsforholdMedTomOgFomTest() {
+        var person = PersonBuilder.lagAnnenPart();
+        PersonRepository.leggTilPerson(person);
         when(headers.getHeaderString(HEADER_NAV_PERSONIDENT))
-                .thenReturn(testscenario.getPersonopplysninger().getAnnenPart().getIdent());
+                .thenReturn(person.personopplysninger().identifikator().value());
         when(uriInfo.getQueryParameters()).thenReturn(new MultivaluedHashMap<>(Map.of(
-                QPRM_FOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(1).ansettelsesperiodeFom().format(ISO_LOCAL_DATE),
-                QPRM_TOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(1).ansettelsesperiodeTom().format(ISO_LOCAL_DATE))));
-        var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
+                QPRM_FOM, person.arbeidsforhold().getFirst().ansettelsesperiodeFom().format(ISO_LOCAL_DATE),
+                QPRM_TOM, person.arbeidsforhold().get(1).ansettelsesperiodeTom().format(ISO_LOCAL_DATE))));
 
+        var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
         assertThat(arbeidsforhold).hasSize(2);
     }
 
-
     @Test
     void hentArbeidsforholdMedTomOgFomTest2() {
+        var person = PersonBuilder.lagAnnenPart();
+        PersonRepository.leggTilPerson(person);
         when(headers.getHeaderString(HEADER_NAV_PERSONIDENT))
-                .thenReturn(testscenario.getPersonopplysninger().getAnnenPart().getIdent());
+                .thenReturn(person.personopplysninger().identifikator().value());
         when(uriInfo.getQueryParameters()).thenReturn(new MultivaluedHashMap<>(Map.of(
-                QPRM_FOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(1).ansettelsesperiodeTom().plusDays(1).format(ISO_LOCAL_DATE),
-                QPRM_TOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(1).ansettelsesperiodeTom().format(ISO_LOCAL_DATE))));
-        var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
+                QPRM_FOM, person.arbeidsforhold().get(1).ansettelsesperiodeTom().plusDays(1).format(ISO_LOCAL_DATE),
+                QPRM_TOM, person.arbeidsforhold().get(1).ansettelsesperiodeTom().format(ISO_LOCAL_DATE))));
 
+        var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
         assertThat(arbeidsforhold).hasSize(1);
     }
 
     @Test
     void hentArbeidsforholdMedArbeidsforholdtype() {
+        var person = PersonBuilder.lagAnnenPart();
+        PersonRepository.leggTilPerson(person);
         when(headers.getHeaderString(HEADER_NAV_PERSONIDENT))
-                .thenReturn(testscenario.getPersonopplysninger().getAnnenPart().getIdent());
+                .thenReturn(person.personopplysninger().identifikator().value());
         when(uriInfo.getQueryParameters()).thenReturn(new MultivaluedHashMap<>(Map.of(
-                QPRM_FOM, testscenario.getAnnenpartInntektYtelse().arbeidsforholdModell().arbeidsforhold().get(0)
-                        .ansettelsesperiodeFom().format(ISO_LOCAL_DATE),
+                QPRM_FOM, person.arbeidsforhold().getFirst().ansettelsesperiodeFom().format(ISO_LOCAL_DATE),
                 ARBEIDSFORHOLDTYPE, "frilanserOppdragstakerHonorarPersonerMm")));
 
         var arbeidsforhold = aaregRSV1Mock.hentArbeidsforholdFor(headers, uriInfo);
